Checklist: Are all the new features documented in both the website and rdoc?

This release adds support for Heckle - Seattle'rb's code mutation tool.
IMPORTANT: DO NOT RELEASE BEFORE HECKLE IS RELEASED WITH THIS PATCH:
https://rubyforge.org/tracker/index.php?func=detail&aid=7312&group_id=1513&atid=5923
There are also several bug fixes to the RSpec core and the RSpec on Rails plugin.

* Applied [#7319] Migration code uses drop_column when it should use remove_column (patch from Pat Maddox)
* Added support for Heckle
* Applied [#7282] dump results even if spec is interrupted (patch from Kouhei Sutou)
* Applied [#7277] model.should_have(n).errors_on(:attribute) (patch from Wilson Bilkovich)
* Applied [#7270] RSpec render_partial colliding with simply_helpful (patch from David Goodlad)
* Added [#7250] stubs should support throwing
* Added [#7249] stubs should support yielding
* Fixed [#6760] fatal error when accessing nested finders in rspec
* Fixed [#7179] script/generate rspec_resource generates incorrect helper name
* Added preliminary support for assert_select (response.should_have)
* Fixed [#6971] and_yield does not work when the arity is -1
* Fixed [#6898] Can we separate rspec from the plugins?
* Added [#7025] should_change should accept a block
* Applied [#6989] partials with locals (patch from Micah Martin)
* Applied [#7023] Typo in team.page

== Version 0.7.4

This release features a complete redesign of the reports generated with --format html.
As usual there are many bug fixes - mostly related to spec/rails.

* Applied [#7010] Fixes :spacer_template does not work w/ view spec (patch from Shintaro Kakutani)
* Applied [#6798] ensure two ':' in the first backtrace line for Emacs's 'next-error' command (patch from Kouhei Sutou)
* Added Much nicer reports to generated website
* Much nicer reports with --format --html (patch from Luke Redpath)
* Applied [#6959] Calls to render and redirect in controllers should return true