@@ -1,5 +1,9 @@
 class RenderSpecController < ApplicationController
   def some_action
+    respond_to do |format|
+      format.html
+      format.js
+    end
   end
   
   def text_action
